k8s/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service

spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: cazzzzz/banking-account-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002

          livenessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: account-service

spec:
  selector:
    app: account-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
