k8s/loan-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      nodeName: ip-172-31-28-168
      containers:
        - name: loan-service
          image: YOUR_DOCKERHUB_USERNAME/banking-loan-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: loan-service
  namespace: banking
spec:
  selector:
    app: loan-service
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
