k8s/transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: cazzzzz/banking-transaction-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: banking
spec:
  selector:
    app: transaction-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
