k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service

spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: cazzzzz/banking-user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001

          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-service

spec:
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
